# languagetool-lsp

./: Cargo.toml  README.md
.github/workflows/: dist.yml
src/: annotated.rs  api.rs  changes.rs  main.rs  settings.rs  source.rs  util.rs
src/annotated/: mod.rs  plaintext.rs
src/api/: check.rs  mod.rs  synonyms.rs  words.rs
zed/: Cargo.toml  extension.toml
zed/src/: lib.rs
