[package]
name = "languagetool-lsp"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["zed"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tower-lsp-server = "0.21"
tokio = { version = "1.45", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
